# pictoral

./: .gitignore  .gitpod.yml  Algorithms.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Command-Record.md  Global_Dec.d.ts  LICENSE  Makefile  README.md  SECURITY.md  package.json  plan.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-pages.yml  deploy-vercel.yml
benches/: image_ops.rs
docs/: oss-release.md
docs/adr/: 0001-rust-wasm-architecture.md  0002-typescript-migration.md  0003-ci-cd-pr-workflow.md  0004-dependency-modernization.md  0005-wasm-bundler-target.md
frontend/: .env.example  .gitignore  bootstrap.js  clean.js  global.d.ts  image-editor  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vitest.config.ts  webpack.config.js  webpack.config.production.js
frontend/e2e/: app.spec.ts
frontend/image-editor/: image_editor.d.ts  image_editor.js  image_editor_bg.js  image_editor_bg.wasm  image_editor_bg.wasm.d.ts  package.json
frontend/public/: 0.bootstrap.js  1.bootstrap.js  138.bootstrap.js  255.bootstrap.js  451.bootstrap.js  739.bootstrap.js  790.bootstrap.js  bootstrap.js  index.html  site.webmanifest
frontend/scripts/: compress-images.mjs
frontend/src/: .gitignore  App.css  App.js  (+8 more)
proj-images/: B.Tech. Weekly Report-13th week.docx  B.Tech. Weekly Report.docx  minor-project-report-1.pptx  ~$nor-project-report.docx
scripts/: build-wasm.sh  prepare-wasm-pkg.js
src/: lib.rs  utils.rs  wasm_integration_tests.rs
(+146 files in other folders)
