[package]
name = "image-editor"
version = "0.1.0"
edition = "2021"
description = "Rust/WASM image processing core for Pictoral"
repository = "https://github.com/mstomar698/pictoral"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.88"
cfg-if = "0.1.2"

console_error_panic_hook = { version = "0.1.1", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[dev-dependencies]
wasm-bindgen-test = "0.2"
criterion = { version = "0.5", default-features = false, features = ["html_reports"] }

[[bench]]
name = "image_ops"
harness = false

[profile.release]
# Speed-optimized release (WASM hot paths: blur, bilateral, scale). Slightly larger binary than opt-level "s".
opt-level = 3
lto = true
codegen-units = 1